# freva2

./: .gitignore  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml
.devcontainer/: config.env  devcontainer.json  docker-compose.extend.yaml  post-install.sh
.devcontainer/mysql/: init.sql
.github/workflows/: pr-test.yaml
example-assets/workflows/: cdo.cwl  double-world.cwl  hello-world-docker.cwl  hello-world.cwl
freva/: asgi.py  requests.py  settings.py  urls.py  views.py  wsgi.py
frontend/: .eslintrc.js  .prettierrc  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/components/: ProtectedRoute.tsx
frontend/components/ErrorPage/: ErrorPage.tsx
frontend/components/Header/: Header.scss  Header.tsx
frontend/components/Login/: LoginButton.tsx  LoginView.tsx
frontend/pages/workflows/: Workflows.tsx
frontend/styles/: base.scss  theme.scss
frontend/utils/: request.ts  store.ts
frontend/utils/auth/: Token.ts  TokenService.ts  authSlice.ts
frontend/webpack/: webpack.base.config.js  webpack.build.config.js  webpack.devserver.config.js
history/: urls.py  views.py
runs/: models.py  serializers.py  urls.py  views.py
runs/migrations/: 0001_initial.py
templates/: index.html
templates/history/: index.html
toil/: client.py  requests.py  responses.py
toil-docker/: Dockerfile
workflows/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
workflows/migrations/: 0001_initial.py
