[tool.poetry]
name = "freva"
version = "0.1.0"
description = ""
authors = ["Andrej Fast <andrej.fast@dkrz.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
django-webpack-loader = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.2.0"
pylint = "^2.15.5"
django-stubs = { extras = ["compatible-mypy"], version = "^1.13.0" }
# the install instructions say to use [compatible-mypy] which limits the max mypy version to lower than ours
# so I'm not sure if this will cause problems but it seems to work
djangorestframework-stubs = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
