[tool.poetry]
name = "freva"
version = "0.1.0"
description = ""
authors = ["Andrej Fast <andrej.fast@dkrz.de>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
django-webpack-loader = "^1.7.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "^1.8.0" }
pyright = "^1.1.283"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
pytest = "^7.2.0"
pylint = "^2.15.5"
types-requests = "^2.28.11.5"

[tool.pyright]
# typeCheckingMode = "strict"
# reportPrivateUsage = "warning"
# reportUnusedImport = "warning"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_explicit = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true

plugins = ["mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "freva.settings"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
